--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               aria-controls="mobile-menu"
             >
               <svg width="32" height="22">
-                <use href="./images/icons.svg#icon-charm_menu-hamburger"></use>
+                <use href="./images/icons.svg#menu-hamburger"></use>
               </svg>
             </button>
           </menu>
@@ -320,7 +320,7 @@
     </section>
     </main>
 <footer class="footer-background">
-        <div class="container-footer">
+        <div class="container-footer container">
             <div class="footer">
                 <a class="footer-logo link" href="./index.html">Web<span class="logo-decorations">Studio</span></a>
                  <p class="footer-paragraph">Increase the flow of customers and
