--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
         <button class="bottom-send" type="submit">Send</button>
     </form>
     </div>
+    </div>
     <div class="js-menu-container menu-container-a" id="mobile-menu">
         <div class="hamburger-div">
           <div class="hamburger-button-container">
@@ -434,7 +435,7 @@
             </button>
           </div>
           <nav class="hamburger-navigation">
-            <ul class="hamburger-nav-list">
+            <ul class="hamburger-nav-list list">
               <li>
                 <a class="hamburger-nav-link link" href="./index.html">Studio</a>
               </li>
@@ -448,7 +449,7 @@
           </nav>
   
           <address class="hamburger-address">
-            <ul class="hamburger-address-list">
+            <ul class="hamburger-address-list list">
               <li>
                 <a class="hamburger-phone link" href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
@@ -461,7 +462,7 @@
               </li>
             </ul>
           </address>
-          <ul class="hamburger-social-media-list">
+          <ul class="hamburger-social-media-list list">
             <li class="hamburger-social-media-li">
               <a class="hamburger-social-media-link" href="">
                 <svg class="hamburger-svg" width="24" height="24">
@@ -494,5 +495,6 @@
         </div>
     </div>
 <script src="./js/modal.js"> </script>
+<script src="./js/mobile-menu.js"></script>
 </body>
 </html>
