--- a/index.html
+++ b/index.html
@@ -120,7 +120,12 @@
         <h2 class="section-team-header">Our Team</h2>
         <ul class="list menu-item-teams">
             <li class="team">
-            <img src="./images/img.jpg" alt="Man in a blue shirt with short stubble" width="264"/>
+            <img class="images"
+            src="./images/img.jpg"
+            srcset="./images/img.jpg x1, ./images/img@x2.jpg x2"
+            alt="Man in a blue shirt with short stubble"
+            width="264"
+            height="260"/>
             <div class="team-container">
             <h3 class="team-name name">Mark Guerrero</h3>
             <p class="paragraph text">Product Designer</p>
@@ -156,7 +161,12 @@
                 </ul>
             </div>
             <li class="team">
-            <img src="./images/img(1).jpg" alt="Man in a blue shirt with smile" width="264"/>
+            <img class="images"
+            src="./images/img(1).jpg"
+            srcset="./images/img(1).jpg x1, ./images/img(1)@x2.jpg x2"
+            alt="Man in a blue shirt with smile"
+            width="264"
+            height="260"/>
             <div class="team-container">
             <h3 class="team-name name">Tom Ford</h3>
             <p class="paragraph text">Frontend Developer</p>
@@ -193,7 +203,12 @@
             </div>
             </li>
             <li class="team">
-            <img src="./images/img(2).jpg" alt="Woman in a pink sweater" width="264"/>
+            <img class="images"
+            src="./images/img(2).jpg"
+            srcset="./images/img(2).jpg x1, ./images/img(2)@x2.jpg x2"
+            alt="Woman in a pink sweater"
+            width="264"
+            height="260"/>
             <div class="team-container">
             <h3 class="team-name name">Camila Garcia</h3>
             <p class="paragraph text">Marketing</p>
@@ -230,7 +245,12 @@
             </div>
             </li>
             <li class="team">
-            <img src="./images/img(3).jpg" alt="Man in a grey t-shrit with stubble" width="264"/>
+            <img class="images"
+            src="./images/img(3).jpg"
+            srcset="./images/img(3).jpg x1, ./images/img(3)@x2.jpg x2"
+            alt="Man in a grey t-shrit with stubble"
+            width="264"
+            height="260"/>
             <div class="team-container">
             <h3 class="team-name name">Daniel Wilson</h3>
             <p class="paragraph text">UI Designer</p>
