--- a/index.html
+++ b/index.html
@@ -438,7 +438,8 @@
                     <span class="privacy-check">
                         <svg width="10" height="8">
                             <use href="./images/icons.svg#icon-checkmark"></use>
-                        </svg></span>I accept the terms and conditions of the 
+                        </svg></span>
+                        <span class="terms-text">I accept the terms and conditions of the</span>
                     <a href="" class="privacy-policy">Privacy Policy</a></label>
         </div>
         <button class="bottom-send" type="submit">Send</button>
