--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         </ul>
         </div>
     </section>
-    <section class="section-customers">
+    <section class="section-customers section">
         <div class="container">
             <h2 class="section-team-header">Customers</h2>
             <ul class="list menu-item-customer">
@@ -349,7 +349,7 @@
             </div>
         <div>
             <p class="footer-media">Social media</p>
-            <ul class="media">
+            <ul class="media list">
                 <li class="social-item">
                     <a class="socials-media" href="">
                     <svg class="social-media-item" width="24" height="24">
