--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </ul>
         </div>
     </section>
-    <section class="section-team">
+    <section class="section-team section">
         <div class="container-team">
         <h2 class="section-team-header">Our Team</h2>
         <ul class="list menu-item-teams">
