--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
     </section>
     <section class="section-team section">
-        <div class="container-team">
+        <div class="container">
         <h2 class="section-team-header">Our Team</h2>
         <ul class="list menu-item-teams">
             <li class="team">
