--- a/index.html
+++ b/index.html
@@ -451,14 +451,14 @@
           <div class="hamburger-button-container">
             <button class="js-close-menu hamburger-close-button">
               <svg class="hamburger-close-svg" width="8" height="8">
-                <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
+                <use href="./images/icon.svg#icon-close-black-18dp-2-1-1"></use>
               </svg>
             </button>
           </div>
           <nav class="hamburger-navigation">
             <ul class="hamburger-nav-list list">
               <li>
-                <a class="hamburger-nav-link link" href="./index.html">Studio</a>
+                <a class="hamburger-nav-link link link-active" href="./index.html">Studio</a>
               </li>
               <li>
                 <a class="hamburger-nav-link link" href="./portfolio.html"
